@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: zlog: use struct rpmioItem_s use/pool container.
     - jbj: poptIO: add --htdebug.
     - jbj: yarn: convert rpmfc to usage mutex with refcounts.
     - jbj: yarn: convert hashTable to usage mutex with refcounts.
